<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_dialog_radius_10dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/signika_semi_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/enable_permission"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/signika_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/denied_external_storage"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />


            <com.example.appa.ui.customview.RippleCornerTextView
                android:id="@+id/tvGoToSetting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="9dp"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:fontFamily="@font/signika_semi_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingVertical="12dp"
                android:text="@string/go_to_setting"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundColorView="#45B4BD"
                app:cornerRadius="24dp"
                app:layout_constraintLeft_toRightOf="@id/tvCancel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContent" />


            <com.example.appa.ui.customview.RippleCornerTextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="9dp"
                android:ellipsize="end"
                android:fontFamily="@font/signika_semi_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingVertical="12dp"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:backgroundColorView="black"
                app:cornerRadius="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvGoToSetting"
                app:layout_constraintTop_toBottomOf="@id/tvContent"
                app:strokeColorT="black"
                app:strokeWidthT="7" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>


</layout>