<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/im_set_back">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/signika_bold"
            android:layout_marginLeft="24dp"
            android:text="@string/my_favorites"
            android:textColor="#F6F8F8"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imNoData"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/im_favorite_nodata"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tvTitleNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/signika_semi_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/no_data"
            android:textColor="#F6F8F8"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/imNoData" />

        <TextView
            android:id="@+id/tvContentNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/no_favorites"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/signika_regular"
            app:layout_constraintTop_toBottomOf="@id/tvTitleNoData" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcMyFavorites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/_60sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:listitem="@layout/item_favorites" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>